--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
         </style>
     </head>
     <body>
-        <img src="Exhibitions_Spring_Small_150x300.gif" alt="Large" />
-        <img src="Exhibitions_Spring_Large_150x600.gif" alt="Large" />
+        <img src="Exhibitions_Spring_Small_150x300.gif" alt="Large" width="300px" height="150px"/>
+        <img src="Exhibitions_Spring_Large_150x600.gif" alt="Large" width="600px" height="150px" />
     </body>
 </html>
